<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/inbox_icon"
        android:title="@string/inbox_action_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/camera_star_icon"
        android:title="NCam"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/publicFragment"
        android:icon="@drawable/public_icon"
        android:title="@string/public_action_button"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/initialBackendConnectionFragment"
        android:icon="@drawable/near_me_icon"
        android:title="@string/near_me_action_button"
        app:showAsAction="ifRoom" />
</menu>